# winzy-laptop-battery

./: README.md  pyproject.toml
tests/: test_winzy_laptop_battery.py
winzy_laptop_battery/: __init__.py
